<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBase"
    tools:context=".ui.fragment.DetailProductFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_pressed"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/capsul_button"
                android:backgroundTint="@color/colorBase"
                android:elevation="5dp"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <ImageView
                android:id="@+id/iv_cart_from_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigate_to_carts"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/capsul_button"
                android:backgroundTint="@color/colorBase"
                android:elevation="5dp"
                android:padding="10dp"
                android:src="@drawable/ic_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <ImageView
                android:id="@+id/iv_image_product"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@android:color/white"
                android:contentDescription="@string/product_image_of"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck,ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_title_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/detail_product"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_image_product" />

            <TextView
                android:id="@+id/tv_price_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_title_product"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_product"
                tools:ignore="TextContrastCheck"
                tools:text="Rp. 10.000" />

            <RatingBar
                android:id="@+id/rb_rating_product"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressTint="@color/colorAccent"
                android:rating="4.5"
                app:layout_constraintBottom_toBottomOf="@+id/tv_price_product"
                app:layout_constraintEnd_toStartOf="@+id/tv_count_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_product" />


            <TextView
                android:id="@+id/tv_count_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rb_rating_product"
                tools:ignore="TextContrastCheck,TextContrastCheck"
                tools:text="(2000)" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_price_product"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_product" />

            <TextView
                android:id="@+id/tv_description_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:ignore="TextContrastCheck"
                tools:text="@tools:sample/lorem" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_description_product"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_product" />

            <TextView
                android:id="@+id/tv_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_review"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_price_product"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/tv_no_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/no_reviews"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_review"
                tools:listitem="@layout/item_review" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimary"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_to_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorite_toggle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_favorite_border"
            android:backgroundTint="@color/colorTextSecondary"
            app:tint="@color/colorBase" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ad_to_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/cta_enabled_state"
            android:fontFamily="@font/poppins"
            android:text="@string/add_to_cart"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorBase"
            android:textStyle="bold"
            app:cornerRadius="24dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>