<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_background"
    tools:context=".ui.fragment.ProductsFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="24dp"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:clickable="true"
        android:src="@drawable/ic_top"
        android:contentDescription="@string/scroll_to_top"
        android:focusable="true"
        app:tint="@color/colorBase"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollY="0dp"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/ib_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:padding="8dp"
                android:contentDescription="@string/navigate_to_carts"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search_product"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_search_view"
                app:layout_constraintBottom_toBottomOf="@+id/ib_cart"
                app:layout_constraintEnd_toStartOf="@+id/ib_cart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ib_cart" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/categories"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="@+id/sv_search_product"
                app:layout_constraintTop_toBottomOf="@+id/sv_search_product" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:layout_height="32dp"
                tools:listitem="@layout/item_btn_category"
                app:layout_constraintStart_toStartOf="@+id/tv_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_category" />

            <TextView
                android:id="@+id/tv_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/all_products"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="@+id/tv_category"
                app:layout_constraintTop_toBottomOf="@+id/rv_categories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_products"
                tools:layoutManager="GridLayoutManager"
                tools:listitem="@layout/item_product"
                tools:spanCount="2">

            </androidx.recyclerview.widget.RecyclerView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_products"
                app:shimmer_auto_start="true">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2">

                    <include
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="8dp"
                        layout="@layout/item_product_placeholder" />

                    <include
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="8dp"
                        layout="@layout/item_product_placeholder" />

                    <include
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="8dp"
                        layout="@layout/item_product_placeholder" />
                    <include
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="8dp"
                        layout="@layout/item_product_placeholder" />


                </GridLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>